package pt.ipp.isep.dei.esoft.project.domain;

public class Employee {
    private String name;
    private String email;
    private String position;
    private String phone;

}
