package pt.ipp.isep.dei.esoft.project.domain;

public class Organization {
    String name;
    String vatNumber;
    String website;
    String phone;
    String email;


}
