package pt.ipp.isep.dei.esoft.project.domain;

public class Task {
    private String designation;
    private String informalDescription;
    private String reference;
    private String technicalDescription;
    private Integer duration;
    private Double cost;

    private TaskCategory taskCategory;

    private Employee employee;
}
